# Zed-But-Browser

./: .gitignore  ABOUT.md  ARCHITECTURE_TIMELINE.md  BUILD_STATUS.md  COMPLETE_PHASES_WALKTHROUGH.md  Cargo.toml  DEBUG_GUIDE.md  DOCS_MAP.md  DOC_INDEX.md  ERROR_FILES  FEATURE_VERIFICATION.md  GETTING_STARTED.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INSTALL_RUST.md  LEGAL_CHECKLIST.md  LICENSE  LICENSE-AGPL  LICENSE-APACHE  LIGHTWEIGHT_DESIGN.md  MOBILE_STRATEGY.md  PHASES_OVERVIEW.md  PHASES_QUICK_REFERENCE.md  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.md  PHASE_2_ROADMAP.md  README.md  SECURITY_AND_TESTING_REPORT.md  SHORTCUTS.md  UI_GUIDE.md  check_rust.ps1  dev-server.js  package.json  todo.json  verify-complete.sh  verify.sh
.github/ISSUES/: 001-nested-tabs-multi-instance.md  002-wire-nested-tabs-to-backend.md  003-mobile-support-plan.md
.github/workflows/: sync-upstream-zed.yml
public/: app.js  browser.js  index.html  nestedTabs.js  onboarding.html  onboarding.js  quick-test.js  styles.css  tests.js
src/: browser.rs  main.rs  sidebar.rs  ui.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: adblock.rs  browser.rs  main.rs  search_index.rs
