[package]
name = "zed-browser"
version = "0.2.0"
edition = "2021"
authors = ["Zed Browser Contributors"]
description = "A lightweight, minimalist cross-platform browser - efficient and minimal"
license = "GPL-3.0-or-later"

[dependencies]
wry = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
strip = true     # Strip symbols for smaller binary

[profile.dev]
opt-level = 0
debug = true
